--- a/public/style.css
+++ b/public/style.css
@@ -99,3 +99,15 @@ body {
 @keyframes blink {
   50% { opacity: 0; }
 }
+
+.admin-link {
+    margin-left: 15px;
+    color: #999;
+    text-decoration: none;
+    font-size: 0.8em;
+}
+
+.admin-link:hover {
+    color: #fff;
+    text-decoration: underline;
+}
